--- a/css/top-section.css
+++ b/css/top-section.css
@@ -157,6 +157,6 @@ form {
 }
 
 .time-img img {
-	padding: 20px;
+	padding: 30px;
 	margin: 80px auto;
 }
